# GPU-FHE

./:  polynomial.py  .gitignore  Bootstrap.py  Ciphertext.py  KeySwitch.py  README.md  arithmetic.py  context.py  dev.py  homo_ops.py  operators.py  primitive.py  test.py  test_arithmetic.py
aten/src/ATen/: CMakeLists.txt  Dispatch.h
aten/src/ATen/native/: native_functions.yaml
aten/src/ATen/native/fhe/cuda/: InnerProduct.cu  KeySwitch.cu  NttImpl.cuh  Utils.cuh  arithmetic.cu
cuda_kernels/: CMakeLists.txt  binding.cpp  intt_kernel.cpp  kernels.h  moddown_kernel.cpp  moddown_kernel.cu  moddown_kernel_2.cu  moddown_op.cu  modup_kernel.cpp  modup_kernel.cu  modup_op.cu  ntt_kernel.cpp  task.md
data/: params_N1024_L4_P1.py  params_N256_L4_P1.py  params_N256_L4_P2.py  params_N64.py
script/: data.txt  data_N256_L4_P2.txt  transfer_c_array.py
torch/fhe/: Ciphertext.py  KeySwitch.py  arithmetic.py  context.py  context_cuda.py  functional.py  homo_ops.py  readme.md  test.py
torch/fhe/data/: bsConst.py  params_N1024_L4_P1.py  params_N256_L4_P1.py  params_N256_L4_P2.py  params_N64.py  params_N64_cheby.py
